--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GitHub Action to send release notes to notion",
   "main": "dist/index.js",
   "scripts": {
-    "check": "eslint src",
+    "check": "biome check",
     "build": "ncc build --minify ./src/index.ts ",
     "test": "jest"
   },
@@ -17,11 +17,7 @@
     "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.17.11",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^9.17.0",
-    "eslint-plugin-import": "^2.28.1",
     "jest": "^29.6.2"
   },
   "dependencies": {
