--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^20.17.11",
     "@vercel/ncc": "^0.38.3",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
